; ModuleID = '/home/carl/AnghaBench/linux/sound/mips/extr_hal2.c_hal2_free_dmabuf.c'
source_filename = "/home/carl/AnghaBench/linux/sound/mips/extr_hal2.c_hal2_free_dmabuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_hal2 = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.device* }
%struct.device = type { i32 }
%struct.hal2_codec = type { i32, i32, i32, i32, i32 }

@DMA_ATTR_NON_CONSISTENT = common dso_local global i32 0, align 4
@H2_BUF_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_hal2*, %struct.hal2_codec*)* @hal2_free_dmabuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hal2_free_dmabuf(%struct.snd_hal2* %0, %struct.hal2_codec* %1) #0 {
  %3 = alloca %struct.snd_hal2*, align 8
  %4 = alloca %struct.hal2_codec*, align 8
  %5 = alloca %struct.device*, align 8
  store %struct.snd_hal2* %0, %struct.snd_hal2** %3, align 8
  store %struct.hal2_codec* %1, %struct.hal2_codec** %4, align 8
  %6 = load %struct.snd_hal2*, %struct.snd_hal2** %3, align 8
  %7 = getelementptr inbounds %struct.snd_hal2, %struct.snd_hal2* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load %struct.device*, %struct.device** %9, align 8
  store %struct.device* %10, %struct.device** %5, align 8
  %11 = load %struct.device*, %struct.device** %5, align 8
  %12 = load %struct.hal2_codec*, %struct.hal2_codec** %4, align 8
  %13 = getelementptr inbounds %struct.hal2_codec, %struct.hal2_codec* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  %17 = trunc i64 %16 to i32
  %18 = load %struct.hal2_codec*, %struct.hal2_codec** %4, align 8
  %19 = getelementptr inbounds %struct.hal2_codec, %struct.hal2_codec* %18, i32 0, i32 4
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.hal2_codec*, %struct.hal2_codec** %4, align 8
  %22 = getelementptr inbounds %struct.hal2_codec, %struct.hal2_codec* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @DMA_ATTR_NON_CONSISTENT, align 4
  %25 = call i32 @dma_free_attrs(%struct.device* %11, i32 %17, i32 %20, i32 %23, i32 %24)
  %26 = load %struct.device*, %struct.device** %5, align 8
  %27 = load i32, i32* @H2_BUF_SIZE, align 4
  %28 = load %struct.hal2_codec*, %struct.hal2_codec** %4, align 8
  %29 = getelementptr inbounds %struct.hal2_codec, %struct.hal2_codec* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.hal2_codec*, %struct.hal2_codec** %4, align 8
  %32 = getelementptr inbounds %struct.hal2_codec, %struct.hal2_codec* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @DMA_ATTR_NON_CONSISTENT, align 4
  %35 = call i32 @dma_free_attrs(%struct.device* %26, i32 %27, i32 %30, i32 %33, i32 %34)
  ret void
}

declare dso_local i32 @dma_free_attrs(%struct.device*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
